fixing  design bugs on smaller devices

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h1 {
     .container {
         width: 100%;
         height: 100%;
-        grid-template-rows: 10% 15% 7% 15% 7% 15% 10%;
+        grid-template-rows: 10% 15% 7% 25% 7% 15% 10%;
     }
     header{
         height: 5%;
